package component.controller;

public interface Controller {
    public String toString();
}
