package component.display;

public interface Display {
    public String toString();
}
