package component.display;

public class LED implements Display{
    public String toString() {
        return "LED";
    }
}
