package component.identification;

public interface Identfication {
    public String toString();
}
