package component.identification;

public class NFC implements Identfication{
    public String toString() {
        return "RFID";
    }
}
