package component.storage;

public class BuiltInStorage implements Storage{
    public String toString() {
        return "BuiltInStorage";
    }
}
