package component.storage;

public interface Storage {
    public String toString();
}
