package component.weightmeasurement;

public interface WeightMeasurement {
    public String toString();
}
